milonga routes are added  bootstrap added to page

--- a/app/js/home/home.html
+++ b/app/js/home/home.html
@@ -1,1 +1,7 @@
-Home
+<br>
+<br><br>
+
+<div class="jumbotron">
+    <h1>Welcome to Milonga Guide </h1>
+    <p>This is a template showcasing the optional theme stylesheet included in Bootstrap. Use it as a starting point to create something more unique by building on or modifying it.</p>
+</div>
